Fix issue with the article/sidebar not align left

--- a/projects/first-paint/components/main-layout.scss
+++ b/projects/first-paint/components/main-layout.scss
@@ -4,55 +4,57 @@ $min-height: 30rem !default;
 
 @mixin main($renderContent: true, $className: null) {
   @if($renderContent) {
-    @include mix-main();
+    #{if($className, $className, 'main, .fp-main')} {
+      @include mix-main();
+    }
   }
 }
 
 @mixin mix-main {
 
-  #{if(className, className, 'main, .fp-main')} {
-    min-height: $min-height;
 
-    // padding: 2rem 0;
-    >section {
+  min-height: $min-height;
 
+  // padding: 2rem 0;
+  >section {
+
+    // width: 100%;
+    article {
+      padding: 1rem;
+      width: 100%;
+      font-size: 1rem;
+
+      >*+* {
+        margin-top: 2rem;
+      }
+    }
+
+    article+aside {
       // width: 100%;
+      min-width: 25%;
+      padding: 1rem;
+      font-size: 0.95rem;
+    }
+
+    @media all and (min-width: 1280px) {
+      display: flex;
+
       article {
-        padding: 1rem;
-        width: 100%;
-        font-size: 1rem;
-
-        >*+* {
-          margin-top: 2rem;
-        }
+        max-width: 75%;
       }
 
-      article+aside {
-        width: 100%;
-        // min-width: 25%;
-        padding: 1rem;
-        font-size: 0.95rem;
-      }
+      align-items: flex-start;
 
-      @media all and (min-width: 1280px) {
-        display: flex;
-
-        article {
-          max-width: 75%;
-        }
-
-        align-items: flex-start;
-
-        article+aside,
-        aside+article,
-        article+[role="complementary"],
-        [role="complementary"]+article {
-          min-width: 25%;
-          max-width: 25%;
-        }
+      article+aside,
+      aside+article,
+      article+[role="complementary"],
+      [role="complementary"]+article {
+        min-width: 25%;
+        max-width: 25%;
       }
     }
   }
+
 }
 
 
